# setup.cfg

[metadata]
name = llm-api-collection
version = 0.1.0
author = Jasper Hajonides
author_email = jasperhajonides@gmail.com
description = A Python package to call multiple LLM APIs with a single interface.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jasperhajonides/llm-api-collection
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.0.0
    # openai, anthropic, etc. if needed

[options.extras_require]
test =
    pytest
    pytest-mock
    # and so on

[tool:pytest]
testpaths = tests

[tool:pylint.messages control]
disable =
    missing-docstring,

